...
    _cmds['whoami'] = (a, c, o, af) {
      final uid = _devId?['uid'] as int?;
      o(uid != null ? 'u0_a$uid' : c.env['USER']!, Ln.stdout);
    };
    _cmds['uname'] = (a, c, o, af) {
      final d = _devId;
      final sys = d?['uname_sysname'] as String? ?? 'Linux';
      final host = d?['hostname'] as String? ?? 'localhost';
      final rel = d?['uname_release'] as String? ?? 'unknown';
      final arch = d?['uname_machine'] as String? ?? 'aarch64';
      if (a.contains('-a')) {
        o('$sys $host $rel $arch GNU/Linux', Ln.stdout);
      } else if (a.contains('-r')) {
        o(rel, Ln.stdout);
      } else if (a.contains('-m')) {
        o(arch, Ln.stdout);
...
